// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Case renders multiple matches 1`] = `
Array [
  <div>
    Home
  </div>,
  <div>
    Dash 
  </div>,
]
`;

exports[`Case renders only if exact match 1`] = `null`;

exports[`Passed props parses dynamic segments and passes to components 1`] = `
<div>
  Group: 
  123
</div>
`;

exports[`Switch ignores falsey chidlren 1`] = `
<div>
  Home
</div>
`;

exports[`Switch render first match 1`] = `
<div>
  Dash 
</div>
`;

exports[`Switch render only one 1`] = `
<div>
  Home
</div>
`;

exports[`Switch render what is not a Case 1`] = `
Array [
  <div>
    Home
  </div>,
  <div>
    Dash 
  </div>,
]
`;

exports[`Switch renders fallback if no match 1`] = `
<div>
  404
</div>
`;

exports[`Switch renders fallback on nested switch with no match 1`] = `
Array [
  <div
    style={Object {}}
  >
    <div>
      404
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "none",
      }
    }
  >
    <span>
      Home
    </span>
  </div>,
]
`;

exports[`Switch renders fallback on nested switch with no match 2`] = `
<div>
  404
</div>
`;

exports[`Switch renders null if no match and no fallback 1`] = `null`;

exports[`smoke tests renders at a path 1`] = `
<div>
  Dash 
</div>
`;

exports[`smoke tests renders the root component at "/" 1`] = `
<div>
  Home
</div>
`;

exports[`smoke tests renders the root component at "/" with path="/" 1`] = `
<div>
  Home
</div>
`;
